--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,18 @@ a {
     cursor: pointer;
 }
 
+h3 a {
+    text-decoration: none;
+}
+
 .yellow {
     color: #ffc107;
+}
+
+.yellow-glow {
+    color: #ffc107;
+    text-shadow: 0px 0px 6px rgba(255, 193, 7, 0.75);
+    animation: shadow-drop-center 3s ease-in-out infinite alternate-reverse both;
 }
 
 .purple {
@@ -49,11 +59,6 @@ a {
     transition: 0.3s ease-in-out;
 }
 
-.nav-link:hover {
-    color: #ffc107 !important;
-    transition: 0.3s ease-in-out;
-}
-
 .container {
     -webkit-perspective: 1000px;
             perspective: 1000px;
@@ -81,4 +86,29 @@ code {
     color: #A370F7;
 }
 
+.nounderline {
+    text-decoration: none !important
+  }
 
+.active {
+    color: #ffc107 !important;
+}
+
+.nav-link {
+    color: #ffffff;
+}
+
+.nav-link:hover {
+    color: #FFC107;
+    text-shadow: 0px 0px 6px rgba(255, 193, 7, 0.75);
+    transition: 0.3s ease-in-out;
+}
+
+  @keyframes shadow-drop-center {
+    0% {
+            text-shadow: 0 0 20px rgba(255, 193, 7, 0);
+    }
+    100% {
+            text-shadow: 0 0 20px rgba(255, 193, 7, 0.75);
+    }
+  }
